# rust-websocket-lite

websocket-codec/: Cargo.toml
websocket-codec/src/: frame.rs  mask.rs  message.rs
websocket-lite/: Cargo.toml
websocket-lite/examples/: async-autobahn-client.rs  hello-world-client.rs  wsdump.rs
websocket-lite/src/: client.rs  ssl.rs  sync.rs
