[package]
name = "websocket-lite"
description = "A fast, low-overhead WebSocket client"
version = "0.3.2"
authors = ["Tim Robinson <tim.g.robinson@gmail.com>"]
repository = "https://github.com/1tgr/rust-websocket-lite"
license = "MIT"
edition = "2018"

[lib]
path = "src/lib.rs"

[[example]]
name = "async-autobahn-client"
path = "examples/async-autobahn-client.rs"

[[example]]
name = "autobahn-client"
path = "examples/autobahn-client.rs"

[[example]]
name = "hello-world-client"
path = "examples/hello-world-client.rs"

[[example]]
name = "wsdump"
path = "examples/wsdump.rs"

[dependencies]
base64 = "0.11"
bytes = "0.5"
futures = "0.3"
native-tls = "0.2"
rand = "0.7"
tokio = { version = "0.2", features = [ "io-util", "tcp" ]  }
tokio-tls = "0.3"
tokio-util = { version = "0.2", features = [ "codec" ] }
url = "2"
websocket-codec = { version = "0.2", path = "../websocket-codec" }

[dev-dependencies]
tokio = { version = "0.2", features = [ "io-std", "io-util", "macros", "rt-core", "time" ]  }
structopt = "0.3"
